--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ hr:not([size]) {
   height: 1px;
 }
 
-h6, h5, h4, h3, h2, h1 {
+h6, h5, h4, h3, h2, h1, .h6, .h5, .h4, .h3, .h2, .h1 {
 
   margin-top: 0;
   margin-bottom: 0.5rem;
@@ -113,7 +113,7 @@ h6, h5, h4, h3, h2, h1 {
 
 
 
-h1 .dark {
+h1.dark {
   color: #20bf60;
 }
 
